# dirshell

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
src/: main.rs
